# spiceAmp

./: .gitignore  README.md  meson.build  spiceAmp.desktop
Models/: DS-1.cir  JCM-800.cir  TS808.cir  TwinReverb.cir
Models/Qucs-S/: 12AT7.cir  12AT7.sch  12AU7.cir  12AU7.sch  12AX7.cir  12AX7.sch  6550.cir  6550.sch  6DJ8.cir  6DJ8.sch  6L6GC.cir  6L6GC.sch  6N6P.cir  6N6P.sch  6V6.cir  6V6.sch  EL34.cir  EL34.sch  ___DS-1.sch  ___JCM-800.sch  ___TS808.sch  ___TwinReverb.dat.ngspice  ___TwinReverb.sch
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  math_functions.cpp  math_functions.h  meson.build  message_widget.cpp  message_widget.h  processor_thread.cpp  processor_thread.h  resource.qrc
